tests/ui/traits/const-traits/conditionally-const-trait-structural-destruct-implied-bounds.old.stderr
error[E0277]: the trait bound `U: [const] Destruct` is not satisfied
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:41:11
   |
LL |         u.f();
   |           ^
   |
note: required by a bound in `TraitA::f`
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:14:15
   |
LL |     fn f(self)
   |        - required by a bound in this associated function
LL |     where
LL |         Self: [const] Destruct;
   |               ^^^^^^^^^^^^^^^^ required by this bound in `TraitA::f`

error[E0277]: the trait bound `T: const Destruct` is not satisfied
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:49:27
   |
LL |     ensure_const_destruct(x.unwrap())
   |     --------------------- ^^^^^^^^^^
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `ensure_const_destruct`
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:9:35
   |
LL | const fn ensure_const_destruct<T: const Destruct>(_t: T) {}
   |                                   ^^^^^^^^^^^^^^ required by this bound in `ensure_const_destruct`

error[E0277]: the trait bound `T: [const] Destruct` is not satisfied
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:64:16
   |
LL |         self.0.g()
   |                ^
   |
note: required by a bound in `TraitB::g`
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:56:15
   |
LL |     fn g(self)
   |        - required by a bound in this associated function
LL |     where
LL |         Self: [const] Destruct;
   |               ^^^^^^^^^^^^^^^^ required by this bound in `TraitB::g`

error[E0277]: the trait bound `T: [const] Destruct` is not satisfied
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:74:40
   |
LL |         ManuallyDrop::into_inner(self).f()
   |                                        ^
   |
note: required by a bound in `TraitA::f`
  --> $DIR/conditionally-const-trait-structural-destruct-implied-bounds.rs:14:15
   |
LL |     fn f(self)
   |        - required by a bound in this associated function
LL |     where
LL |         Self: [const] Destruct;
   |               ^^^^^^^^^^^^^^^^ required by this bound in `TraitA::f`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
